--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 		<meta name="keywords" content="">
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" />
 		<meta charset="utf-8">
-		<meta name="google-site-verification"
-             content="<meta name="google-site-verification" content="eWiu8hELV9tS9yJM7962XQMQvKKuyEExGfR1O6Qj5u8" />" />
+		<meta name="google-site-verification" content="eWiu8hELV9tS9yJM7962XQMQvKKuyEExGfR1O6Qj5u8" />
 		<link href="stylesheet.css" rel="stylesheet" type="text/css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,300,400|Open+Sans+Condensed:300|Lato|Montserrat|Source+Sans+Pro:400,700italic|Varela|Poiret One' rel='stylesheet' type='text/css'>
 		<link rel="icon" href="favicon.ico">
