added fading banner

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				<img src="tyto.png"></img>
 				<p>Agriculture solutions for a new age.</p>
 				<div class="slider">
+					<img id="imgblank" class="display" src="image0.jpg"/>
 					<img id="img0" class="display" src="image1.jpg"/>
 					<img id="img1" src="image2.jpg"/>
 					<img id="img2" src="image3.jpg"/>
@@ -82,7 +83,7 @@ Additional applications will help assess efficiency and value of the system, bus
 				targetImg.className = '';
 				newImg.className = 'display';
 				curr = (curr+1)%4;
-			}, 3000);
+			}, 4000);
 		</script>
 	</body>
 </html>
