updated locations on images

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
 				<p class="subheading">Agriculture:</p>
 				<p class="subheadingtext">Mobile solutions for communicating real time information across various types of equipment or personnel to increase efficiency and value to the operation.</p>
 
-				<p class="subheading">Local Trucking and Hauling Operation</p>
+				<p class="subheading">Local Trucking and Hauling Operation:</p>
 				<p class="subheadingtext">Mobile solutions providing updated arrival time, cycle time, and location information for semi repetitive loop operations.</p>
 
 				<h1 class="heading">Benefits</h1>
 				<hr/>
 
-				<p class="subheading">Agriculture</p>
+				<p class="subheading">Agriculture:</p>
 				<p class="subheadingtext">Agricultural operations which include semi repetitive operations with changing locations or field operations where there may also be a need to monitor distribution/delivery of product (planting, spraying, post harveset grain hauling) or collection/harvest of grain/products and transportation to storage.</p>
 
-				<p class="subheading">Trucking/Hauling</p>
+				<p class="subheading">Trucking/Hauling:</p>
 				<p class="subheadingtext">Small to mid size trucking operations with semi repetitive supply routes but changing loading and/or unloading sites. Examples might include hauling gravel, lumber harvest, road paving operations.</p>
 			</div>
 			<!--<div class="info">
