--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
 				<p>Agriculture solutions for a new age.</p>
 				<div class="slider">
 					<img id="imgblank" class="display" src="image0.jpg"/>
-					<img id="img0" class="display" src="image1.jpg"/>
-					<img id="img1" src="image2.jpg"/>
-					<img id="img2" src="image3.jpg"/>
-					<img id="img3" src="image4.jpg"/>
+					<img id="img0" class="display" src="image1.png"/>
+					<img id="img1" src="image2.png"/>
+					<img id="img2" src="image3.4.png"/>
+					<img id="img3" src="image4.png"/>
+					<img id="img4" src="image5.png"/>
+					<img id="img5" src="image6.3.png"/>
 				</div>
 			</div>
 			<div class="subbanner">
@@ -81,10 +83,11 @@ Additional applications will help assess efficiency and value of the system, bus
 			function setTime(){
 				setTimeout(function(){
 					var targetImg = document.getElementById("img"+curr);
-					var newImg = document.getElementById("img"+(curr+1)%4);
+					curr = (curr+1)%6;
+					var newImg = document.getElementById("img"+curr);
 					targetImg.className = '';
 					newImg.className = 'display';
-					curr = (curr+1)%4;
+					
 					if(curr == 0){
 						timer = 6000;
 					} else {
